test/samples/valid/interp/assert.maruir
fun main(): u8 {
	entry:
		assert true;
		return u8(42);
}
