test/samples/invalid/cfg/bad_label1.maruir
fun foo(b: bool) {
    entry:
        branch b exit no_label;
    exit:
    return;
}
